# Haskell-Course

./: README.md
level-battles/L1/: LevelBattle.hs  README.md
level-battles/L2/: L2.cabal  LevelBattle.hs  README.md
level-battles/L3/: L3.cabal  LevelBattle.hs  README.md  Tests.hs
level-battles/L4/: L4.cabal  LevelBattle.hs  README.md
level-battles/L5/: L5.cabal  LevelBattle.hs  README.md  list.txt
training-exercises/TE01/: README.md  TE01.cabal  Tests.hs  TrainingExercises-extra.hs  TrainingExercises.hs
training-exercises/TE02/: README.md  TE02.cabal  TrainingExercises.hs
training-exercises/TE03/: README.md  TE03.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE04/: README.md  TE04.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE05/: README.md  TE05.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE06/: README.md  TE06.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE07/: README.md  TE07.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE08/: README.md  TE08.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE09/: README.md  TE09.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE10/: README.md  TE10.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE11/: README.md  TE11.cabal  Tests.hs  TrainingExercises.hs
training-exercises/TE12/: README.md  TE12.cabal  Tests.hs  TrainingExercises.hs
