name:          LB3
version:       0.1.0.0

build-type:    Simple
cabal-version: >=1.10

library
  exposed-modules:
    LevelBattle
  build-depends:
    base >=4 && <5
  default-language:
    Haskell2010

test-suite LevelBattle-tests
  type:
    exitcode-stdio-1.0
  main-is:
    Tests.hs
  other-modules:
    LevelBattle
  build-depends:
      base  >=4 && <5
    , hspec >=2 && <3
  default-language:
    Haskell2010
